# Additional_difficulty

./: .gitignore  LICENSE.md  README.md  calc.py  differences.py  division.py  factoriser.py  multiplication.py  package-lock.json  package.json  primes.json  products.py  pyproject.toml  sum_of_two.py  tsconfig.json
.github/workflows/: build_python.yml  typecheck_and_lint.yml
src/additional_difficulty/: differences.py  division.py  factoriser.py  index.mts  main.mjs  main.mts  products.py  sum_of_two.py
tests/: tests.mjs
