[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "additional_difficulty"
dynamic = ["version"]
authors = [{name = "James Parrott", email = "james.parrott@proton.me"}]
description = "Calculates the difficulty of mental arithmetic calculations."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3"
keywords = ["Arithmetic"]
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python",
]
dependencies = []


[tool.hatch.version]
path = "package.json"
pattern = '"version": "(?P<version>\d+\.\d+\.\d+)",'

[tool.hatch.build.targets.wheel]
exclude = [
  "*.mjs",
  "*.mts",
  "*.json",
  "*.js",
  "*.cjs", 
  "*.ts", 
]




